# Projekt-3-projektowanie-i-analiza-algorytmow

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: vert_shader.vert
src/: board.cpp  board.hpp  bot.cpp  bot.hpp  game_manager.cpp  game_manager.hpp  main.cpp  move.hpp  move_generator.cpp  move_generator.hpp  pieces.hpp  precomputed_move_data.cpp  precomputed_move_data.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp
